tdf#156112 SwNavigator: Disallow footnote and endnote dnd

Change-Id: I892f8a34f43629f3e76aa187299dc8c805b72545
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153855
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 4f9294ec702a82765c04c8652dddec4dda1e6075)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153891
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>