sw/source/uibase/utlui/content.cxx
@@ -2752,6 +2752,8 @@ bool SwContentTree::FillTransferData( TransferDataContainer& rTransfer,
         case ContentTypeId::INDEX:
         case ContentTypeId::REFERENCE :
         case ContentTypeId::TEXTFIELD:
+        case ContentTypeId::FOOTNOTE:
+        case ContentTypeId::ENDNOTE:
             // cannot be inserted, neither as URL nor as section
         break;
         case ContentTypeId::URLFIELD:
